scripts/nullaway/nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8.txt
../nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Parking.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return placePool;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/ParkingPlacePool.java:59: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return place;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:19: error: [NullAway] initializer method does not guarantee @NonNull field parkings (line 17) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Car() {
           ^
    (see http://t.uber.com/nullaway )
3 errors
